--- a/_posts/2020-02-01-DS-intro.md
+++ b/_posts/2020-02-01-DS-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "Distributed Systems: Introduction"
+title: "Introduction"
 tags: [Distributed Systems]
 categories:
   - Distributed Systems
