--- a/_posts/2020-02-01-ML-intro.md
+++ b/_posts/2020-02-01-ML-intro.md
@@ -1,9 +1,9 @@
 ---
-title: "Machine Learning: Introduction"
+title: "Introduction"
 tags: [Machine Learning]
 categories:
   - Machine Learning
-date: 2020-02-12
+date: 2020-02-01
 ---
 
 ## 1.  **Introduction**
