Added document properties

--- a/_posts/2020-02-07-ML-3.md
+++ b/_posts/2020-02-07-ML-3.md
@@ -1,3 +1,10 @@
+---
+title: "Nearest Neighbour Methods"
+tags: [Machine Learning]
+categories:
+  - Machine Learning
+date: 2020-02-07
+---
 
 ## **3. Nearest Neighbour Methods**
 
