--- a/_posts/2020-02-09-ML-4.md
+++ b/_posts/2020-02-09-ML-4.md
@@ -1,3 +1,11 @@
+---
+title: "Neural Networks: Perceptron"
+tags: [Machine Learning]
+categories:
+  - Machine Learning
+date: 2020-02-09
+---
+
 ## **4. Neural Networks: Perceptron**
 
 **Learning outcomes**
