Uploaded new notes for secure comp

--- a/_posts/2020-02-05-SC-3.md
+++ b/_posts/2020-02-05-SC-3.md
@@ -10,6 +10,10 @@ date: 2020-02-05
 
 ## **3. Symmetric Ciphers**
 
+Source code for this post can be found at:  
+[View Source code - MAC](https://github.com/chaerim-kim/Cryptographic-Methods/tree/master/2.Symmetric%20ciphers)
+
+
 **Reminder**
 
   - Idea that we want data confidentiality, integrity, authenticity –
