--- a/_posts/2020-02-07-SC-4.md
+++ b/_posts/2020-02-07-SC-4.md
@@ -7,8 +7,10 @@ date: 2020-02-07
 ---
 
 
-
 ## **4. Message authentication**
+
+Source code for this post can be found at:  
+[View Source code - MAC](https://github.com/chaerim-kim/Cryptographic-Methods/tree/master/1.Hash%20Function)
 
 
 **Objectives**
