--- a/_posts/2020-02-09-SC-5.md
+++ b/_posts/2020-02-09-SC-5.md
@@ -1,167 +1,285 @@
 ---
-title: "Introduction"
+title: "Public key cryptography"
 tags: [Secure Computing]
 categories:
   - Secure Computing
-date: 2020-02-01
+date: 2020-02-09
 ---
 
+## **5. Public key cryptography**
 
-## 1.  **Introduction**
+Source code for this post can be found at:  
+[View Source code - MAC](https://github.com/chaerim-kim/Cryptographic-Methods/tree/master/4.Public%20Key%20Cryptography)
 
-**Questions**
 
--   How big of an issue is security?-- will be looking at recent
-    examples
--   What we want to achieve in securing a system?
--   Who are the bad guys that trying to break in
--   Is there a perfectly secure? -- there isn't, it is immeasurable
+**Last time**
 
-**c.s.1 - Security flaw in Tory app**
+  - **MAC** – ways of helping us guarantee the integrity w/o the
+    confidentiality  - We use **hash function** = combo of secret info + msg and hash it
+    output is a fixed sized hash good way of checking that the msg
+    hasn’t changed
+      - **Hash** **function** is sensitive to changes
+  - Merkle Damgard method is vulnerable to **length extension**
+    **attacks**, as you can tamper without knowing the secret use
+    **HMAC** where you hash twice
+  - Hash function – resistant to collisions. It will always happen
+    **but** we needa make it hard
+  - Old hash methods are easier to find collisions
+      - Recent e.g – when you hash using md5, the same 2 hello program,
+        it hashes to same value\!\!
+  - SHA256 – more prone to attacks
 
--   Tory party conference has an app- last year's app didn't have any
-    authentication, so the delegates could change all the details e.g.
-    photos and position.
-    -   E.g changed Boris Johnson's to Alexander Johnson
+**Objectives**
 
-**c.s.2 - Blog of Nadine Dorries**  
+  - Understand the basic principles underlying **Public Key Cryptography
+    (PKC)**
+  - Appreciate differences between PKC and symmetric ciphers
+  - Recognise the applications of PKC to key distribution and message
+    authentication
+  - Asymmetric cipher – uses DIFFERENT keys to encrypt and decrypt.
 
--   She had a blog - someone didn't like it, so hacked it and changed it
-    to some dumb content for posts of span of 2 years
--   She used a very easy password __web defacement__: attack
-    on a website that changes the visual appearance of the site or a
-    webpage
+**Introduction to Public Key Cryptography - PKC**
 
-**c.s.3 - Data breaches in 2019**  
+  - We use 2 different keys – **a public key** (+) and a **private key**
+    (-)
+  - Is based on number theory, not bit manipulation
+      - Prime numbers and factorisation, etc
+  - We find the key size to be pretty big, but this doesn’t mean that it
+    is more secure.
+  - Don’t think that AES is gonna make the symmetric obsolete. (not
+    needed) we need both\!\! below
 
--   Been happening a lot more recently. In August, 4000 data breaches
-    -   __Data breach__: when users and records of those
-        users are leaked e.g Email addresses, passwords, credit card
-        details
-    -   Probably more that haven't been reported either
--   The impact of data breach in business is enormous!!!! in terms of
-    reputation, finance etc
+**PKC scenario**
 
-**Vulnerability of our daily lives**
+  - Alice is tryna send a msg to bob
+  - Alice has a plaintext **p**, and key **K<sub>B</sub>**<sub>+</sub>
+    uses bob’s public key\!\!, which yields a cipher text **C**
+      - But bob the only person who can decrypt that using his private
+        key
+  - Send it to Bob
+  - Bob has **cipher text** and his **private key**
+  - Bob can use the private key to **decrypt** the original msg
+  - Eve is capturing the cipher text, but she can't do anything coz she
+    can only see the public key of bobs.
+      - If bob is the only person who knows & the key is big enough to
+        be resistant to brute forcing safe
 
--   In terms of devices we carry - how vulnerable those are - lots of
-    software, data, etc
--   When the issue becomes public, its probably after the patches has
-    been released so update security firmware diligently!!
+**Requirements**
 
-**c.s.4 - Manchester bus travel app**
+  - What do we need for this to work?
+      - Easy to encrypt for that person, given the public key
+      - Easy for that person to decrypt given their private key
+      - Very very diff to determine priv from pub
+      - Hard to recover the plaintext given public key and cipher (w/o
+        priv key)
+  - We have many diff approaches—RSA, ElGamal, ECC
 
--   The hackers normally have knowledge on how to develop it securely
-    BUT they gave out free bus travels
--   security is always affecting - business, organisations, devices etc
-    hence it is important!!
+**PKC algorithms**
 
-**Security goals -- p16**
+  - What they have in common is they are all based on a problem that is
+    mathematically intractable to solve in the absence of certain piece
+    of information
+      - So if we hide this piece of info, no one can decrypt it.
 
-__Q: What is the goal of security?__
--   Class suggestions : Privacy, safe, data, confidentiality,
-    authenticity, unbreachable
-1.  __Data Confidentiality__ -- users should be given only
-    enough __privilege__ to perform their duties.
-2.  __Integrity__ -- trust of data at transit to ensure no
-    insertion, deletion, replay (e.g. no replay - withdraw \$411242424
-    -- don't wanna do that twice)
-3.  __Authenticity__ - about who or what source of that data
-    is, can we trust the msg from someone that claims to send it, about
-    system users when they are accessing the server
-    a.  Authenticity of the file- has not been corrupted since creation
-    b.  System user authenticity -- who is it that are accessing the server, do they have the right to?
-4.  __Access control__ - what to authorise when they have
-    access - different level of access
+  - **RSA**- about factoring large number
 
-5.  __High availability__ -- keeps data and resources
-    available for authorized use ONLY at all times, even during
-    emergency
+  - **ElGamal**- computing discrete log
 
-    a.  Challenges = DoS (Denial of service) attacks.
+      - Victorious – Moscow’s online voting system using El Gamal, but
+        the key size was too small so the priv key could be determined
+        within 20 min wtf lol – figured before the vote so now its 1024
+        bits
 
-6.  __Trustworthy system logs__ - can we trust the logging
+  - **ECC**- about elliptic curve
+      - It gives smaller key size, but same level of protection as RSA
+      - Smart cars – advantageous to have small keys. But w quantum
+        computing - ECC will be easiest to crack
+      - Cautious because of Edward Snowden – leaked about NSA
+          - Suggestion in this doc that NSA deliberately weakened ECC?
 
-    a.  The attackers could erase their presence from system logs
+**RSA Algorithm**
+1.  Select prime numbers **p and q**
+2.  We multiply them to calculate **n** = pq
+3.  We calculate **Euler totient** of n**, φ(n)** which is the product
+    of p-1, q-1
+    1.  φ(n) = (p-1)(q-1)
+4.  Select **integer e,** so that the greatest common divisor of e and
+    Euler totient is 1
+    1.  Must be greater than 1, but less than Euler, and no common
+        divisor
+5.  Calculate another integer d, such that **d\*e modular φ(n) = 1**
+    1.  Modulo 10 = can be range from 0, 9 but if it hits 10, back to
+        zero
+<!-- end list -->
 
---> We use cryptography to save all that!
 
-**Is there a perfect security?**  
-Q - what would you do to protect data on my pc?  
--   Disconnect from internet
--   Back up the data -- prevents from entirely losing it
--   Password
--   Encrypt the data - will talk about the vulnerability of encryption
--   No such thing as 100% secure!! - all to do with what you tryna
-    protect, who the user is, who has access
--   dissaving the tracker from thinking its not worthwhile hacking yours
-    (if its too time consuming)
+  - Now we have n, e, d
+      - Combination of {e,n} public key
+      - Combination of {d,n} private key
+      - So they are interloped as they were derived from the same set
+  - Given those values, you can now do encrypt and decryption, which is
+      - ![image](https://user-images.githubusercontent.com/33334078/75275622-bc416980-57fc-11ea-8a1b-761066a46a62.png)
+      - Encryption is we take plain text P, raise it to e, then do
+        modulo n = cipher\!\!
+      - Decryption is we take cipher text C, raise it to d, do modulo n
+        = plain text\!
+          - Q: But how do you increase the plain text by e??????
+              - A: Text corresponds to bit pattern. Convert hello binary
+                integer
+              - So take a piece of text, and raise it to a power by
+                changing it to a numerical value
+  - Fact that we do modulo n, we are limited to size of the chunk of bit
+    – it we have longer text, we need to spilt it into diff blocks.
+      - N= 1000 bit, we cant do no more than 1000 bits. But how fast is
+        this gonna be?
 
-**Why is security hard?**
+**RSA Example**
 
--   Software is so complicated - more complex than physical computers
--   Problem is that human beings make mistakes!! could lead to
-    **vulnerabilities**
--   Can't __quantify__ the security - like yours is 79, mine
-    is 23,
-    -   a lot has to do with security being an __emergent
-        property__
-    -   Depends on the value asset, target, how you use it daily, who
-        has access to your data.
-    -   hence you can't easily measure it
+1.  Select two prime number
+    1.  p = 17, q=11
+2.  Calculate the product
+    1.  n = 17\* 11= 187
+3.  Euler totient
+    1.  φ(n) = (p-1)(q-1)
+    2.  φ(n) = 16\*10 = 160
+4.  Choose integer e
+    1.  e = 7
+5.  Determine value of d such that
+    1.  **d\*e modular φ(n) = 1**
+    2.  7d mod 160 = 1, so first possible value is 7d= 161, d = 23.
+        1.  160/7 = 22.32535 so 23. 23\*7 = 161. 161 mod 160 =1
+<!-- end list -->
 
-**Human factor in security**
 
--   PEBKAC (problem exists btwn keyboard and chair) problem lies in the
-    user!
--   But is it fair to blame it all on users tho?
-    -   NO. From developer's perspective!!!
+  - Public key and private key as a pair
+  - ![image](https://user-images.githubusercontent.com/33334078/75275652-c6fbfe80-57fc-11ea-88f0-7ef5a634ba83.png)
+      - Doesn’t work for all possible values
+      - encrypt(187) = 0. Decrypt(0) = broken
+      - There's a limited range of possible values you can encrypt in
+        one go which is <span class="underline">determined by the size
+        of n**.**</span> so you need to have big n
 
-**Software Engineers perspective NCSE** \<CYBERUK in practice\>
+**Attacking RSA**
+  - Brute force search is possible for all private keys
+      - If d and n is large enough, we are safe, but it will be
+        incredibly slow\!
+  - We can try to get the original prime factor of n, which is smarter.
+    if you can **factorize** n, you can find the keys.
+      - Generated sets of **RSA numbers** varying from size, and they
+        set the challenge of ppl factorising this successfully
 
--   If it can't be used well by the users blame the developer!
--   the point is, when we build a secure system, we gotta think about
-    how humans think and its psychology, and gotta design accordingly!
--   Build software that can be used securely BY the user!!
+**RSA Number examples**
 
-**Hackers**
+  - ![image](https://user-images.githubusercontent.com/33334078/75275705-cfecd000-57fc-11ea-96a9-6cd571287f3f.png)
+  - Name use dot be after the digits but is now by its bits.
+  - RSA 1024, 2048 hasn’t been factorized yet.
+  - What does it mean to be factorized?
+      - If you can factorize it, it means that you have the recipe for
+        finding the keys.
 
--   Hackers: was more of a neutral term for them to decompile and
-    understand how the app
--   There are dual meanings -- depends all on the context we use!
-    -   White Hat -- uses their skills ethically
-    -   Black hat -- bad guy
-    -   Both white and black hat - ppl both have sufficient knowledge
-        about security
+**RSA-768**
 
-**Bellovin's Threat Matrix of Hackers** -- (P) \[1 pdf 22\]
+  - Find 2 prime numbers, multiplied together will yield that number\!
+    which for 768 is incredibly long
+  - 1024 is going to be 1000 times harder, but will be able to in
+    decades
+  - GPU, FPGA, clouds with increasing computing power, ull be able to do
+    this in a powerful way in ur pc\!
 
--   Degree of focus and skills needed x and y axis
-1.  Joy hackers: who experiment without an intent - let the curiosity be
-    gone
-2.  Opportunistic hackers: no purpose, but skills required so more
-    dangerous
-    a.  Botnet, is done through opportunistic hacks
-        i.  Botnet: number of internet connected devices, each of which
-            is running one or more bots (from computers that lost its
-            security permission). Used for DDoS attacks, spam, etc
-3.  Targeted attacks - very specific goals, could get paid
-4.  Advanced persistent threats- very skilled, targeted, and persistent!
+**Applications of PKC**
 
-**Advanced persistent threats**
+  - So, we could use this general encryption and decryption and I can
+    use public key for someone to encrypt sth, and we never have to
+    exchange keys solving the problem of symmetric ciphers of having to
+    share a key.
+  - Q: Don’t need to share a key in asymm\! But then why do we need
+    symmetric?
+      - Dotnet run AES CBC 10000000 = 0.014 sec
+      - Dotnet run 10000000 = 6.479 sec
+      - RSA is good, but its WAY **SLOWER**\!\!\!\!\!\!\!\!\!\! we can't
+        use it for <span class="underline">large chunks of data.</span>
+        Hence not a replacement
 
--   Very sophisticated threats -- multidimensional, complex and tight
--   Malware that attacks systems in multitude of ways **Cyber warfare**
-    -   E.g. **Stuxnet** -- malware that caused substantial damage to
-        Iran's nuclear program.
-    -   Goal was to prevent Iran from developing nuclear weapon
--   could even attack and destroy industry programs
+  - **Together** – use RSA to encrypt the shared key that’s used for AES    (symmetric),
+  - Use public key techniques to securely exchange the **session key,**
+    which is then used for symmetric cipher.
+  - Basis of everything you do in HTTPs url
+  - Public key cipher as a way of securely exchanging session key, then
+    AES
 
-\<CYBERUK in practice\> -
-https://www.youtube.com/watch?v=u6x9C7t\_41s&feature=youtu.be
-https://www.youtube.com/watch?v=u6x9C7t_41s&feature=youtu.be
+**Digital Signatures**
 
--   it is impossible for users to NOT fall into phishing at all!!
--   The password strategy with long and frequent change aint working
--   We understand the technology better than we understand the people need to teach technology so that its closer to how ppl actually think
--   Security that understands and supports normal human behaviour!
+  - So far we’ve talked about using public key and encrypting sth so
+    that only the person w/ private key can decrypt it. **cipher**
+  - BUTT What if we **encrypt it with priv key**, and **decrypt with
+    public key**\!\! But everyone knows public key useless
+    confidentiality
+  - However, if you successfully decrypted it with a public key, you
+    know the person who encrypted it, has the priv key
+    <span class="underline">ensuring authenticity and integrity</span>
+  - So what we could do is take all our msgs, sign it with digital
+    signature by encrypting them with private key, and decrypt with
+    public key. too slow, so we don’t but since its slow we do it with
+    hash.
+      - We can compute a hash of any file, and this hash can be
+        efficiently encrypted with priv key. Now to verify the
+        signature, we decrypt with public key, make sure the hash value
+        is the same as the computed hash value.
+
+
+  - Know the difference between cipher and dig signing
+      - **Cipher** to encrypt using public key, decrypt private key
+      - **Digital signing** – the other way around
+
+**Key management Issues**
+  - We can use pub key to help us exchange shared key to use it in apps,
+    BUT, that only works if you trust the public key have to
+    <span class="underline">verify the public key</span>\!\!
+  - what **certificates** are for\! have a **third party** to verify it
+      - U assume you trust the third party, then you know that ur public
+        key is genuine.
+
+**Public Key Certificates**
+  - Take public key and have other organisation (**certificate
+    authority)** to sign it using their private key.
+      - If you assume you trust the third party, then you know that ur
+        public key is genuine.
+  - To what extent can you trust the third party tho?
+
+**TLS certificate Validation -** How do we know that a public key is
+valid?
+  - **Domain** **level** – checking the right to administratively manage
+    a domain name
+  - **Organisation** – domain level validation + organization’s actual
+    existence as a legal entity
+  - **Extended** – must persuade the certificate provider of its legal
+    identity
+      - Troy Hunt says: no point, as it is more of a selling technique
+        that tricks the company and users
+  - Is it worthwhile to do extra certification like this?
+
+**X.509**
+
+  - Part of X.500 standards, which define various directory services for
+    networked systems.
+  - Provides a standard **public key infrastructure (PKI)**
+      - Repository for public key certificates
+      - Authentication protocols using certificate
+      - Chaining of certificates
+      - Procedure for certificate revocation
+
+**X.509 certificate format**
+
+  - ![image](https://user-images.githubusercontent.com/33334078/75275735-dc712880-57fc-11ea-8e36-0c2079b05c8e.png)
+
+
+**Summary**
+
+  - Seen that public key cryptography involves the use of a key part,
+    one of which is public, the other private
+  - Considered how an individual’s public key can be used to encrypt
+    messages intended for that individua
+  - Discussed how an individual’s private key can be used to assert
+    their identity via a digital signature
+  - Explored the details of RSA algorithm and considered its resistance
+    to attack
