Added table of contents

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -8,7 +8,12 @@ date: 2020-07-15
 
 ## **July's Updates**
 
-# [July 15th, 2020]
+### Table of Contents
+[1. Huawei is being banned from the UK's 5G network](#Huawei-is-being-banned-from-the-UK's-5G-network)  
+[2. Trump says he has ended preferential treatment for Hong Kong](Trump-says-he-has-ended-preferential-treatment-for-Hong-Kong)
+
+
+## [July 15th, 2020]
 
 ## Huawei is being banned from the UK's 5G network
 - **Who:** The UK government, on the Chinese phone-maker Huawei
@@ -35,9 +40,9 @@ date: 2020-07-15
 
 
 
-# [July 16th, 2020]
+## [July 16th, 2020]
 
 
 
 
-# [July 17th, 2020]
+## [July 17th, 2020]
