--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -9,8 +9,8 @@ date: 2020-07-15
 ## **July's Updates**
 
 ### Table of Contents
-[1. Huawei is being banned from the UK's 5G network](#Huawei-is-being-banned-from-the-UK's-5G-network)  
-[2. Trump says he has ended preferential treatment for Hong Kong](Trump-says-he-has-ended-preferential-treatment-for-Hong-Kong)
+[1. Huawei is being banned from the UK's 5G network](#huawei-is-being-banned-from-the-uk's-5g-network)  
+[2. Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)
 
 
 ## [July 15th, 2020]
