updated 16th's news

--- a/_posts/2020-07-15-News-2.md
+++ b/_posts/2020-07-15-News-2.md
@@ -11,7 +11,7 @@ date: 2020-07-15
 ### Table of Contents
 [1. Huawei is being banned from the UK's 5G network](#huawei-is-being-banned-from-the-uk's-5g-network)  
 [2. Trump says he has ended preferential treatment for Hong Kong](#trump-says-he-has-ended-preferential-treatment-for-hong-kong)
-
+[3. Major US Twitter accounts hacked in Bitcoin scam](#major-us-twitter-accounts-hacked-in-bitcoin-scam)
 
 ## [July 15th, 2020]
 
@@ -41,6 +41,54 @@ date: 2020-07-15
 
 
 ## [July 16th, 2020]
+
+##  Major US Twitter accounts hacked in Bitcoin scam
+- **Who:**  Many Twitter account holders with millions of followers, like Elon Musk, Jeff Bezos, Bill Gates and many prominent US figures have been targeted by hackers on Twitter for a Bitcoin Scam.
+- **What:**  The official accounts of several figures have been hacked to offer to double any Bitcoin payment sent to the address of their digital wallet, scamming people to send a Bitcoin payment.
+- **When:**  July 16th, 2020
+- **Where:**  Amongst the largest social media platform, Twitter, online.
+- **Why:**  The hackers' motive seems to be that they wanted to make as much money as quickly as they can, as they would have known that the tweets would be taken down soon - equivalent of a 'smash and grab' operation.
+- **How:**  The tweet said that Elon Musk is "Feeling grateful, doubling all payments sent to my BTC address" - making people
+- **So?:**  
+  -  Twitter had "locked down the account within a few minutes of the breach and removed the related tweet".  
+  - The issue implies that there's a problem with Twitter's platform itself - with it being a persistent problem among the platform.  
+- [Link to the article](https://www.bbc.com/news/technology-53425822)
+
+
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Where:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
+
+
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Where:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
+
+
+
+##  
+- **Who:**  
+- **What:**  
+- **When:**  
+- **Where:**  
+- **Why:**  
+- **How:**  
+- **So?:**  
+- [Link to the article](https://www.bbc.com/news/world-us-canada-53412598)
 
 
 
